# cpmdash

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  Procfile  README.md  cpmdash.code-workspace  docker-compose.yml  entrypoint.sh  package-lock.json  package.json  pyproject.toml  requirements.txt  test_sankey.py  tmp_extract.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml  pr-title.yml  release.yml
assets/css/: input.css
cases/: views.py
cases/templates/cases/: index.html
core/: settings.py  urls.py
dash/: admin.py  models.py  views.py
dash/migrations/: 0001_initial.py
dash/templates/dash/: base.html  index.html
dashboard/: admin.py  models.py  views.py
dashboard/migrations/: 0001_initial.py  0002_encounters_patients_referrals.py
dashboard/templates/dashboard/: index.html
docs/: tenant-rollout-checklist.md
scripts/git-hooks/: pre-push
src/: manage.py
src/apps/accounts/: __init__.py  adapter.py  admin.py  forms.py  models.py
src/apps/blog/: admin.py  forms.py  models.py  urls.py  views.py
src/apps/cases/: urls.py  views.py
src/apps/charts/: od_utils.py
src/apps/core/: admin.py  middleware.py  models.py  urls.py  views.py
src/apps/tasks/: admin.py  (+6 more)
src/cases/: urls.py  views.py
src/charts/: od_utils.py
src/config/: settings.py  urls.py
src/core/: installed.py  settings.py  urls.py  views.py
src/cpmdash/: asgi.py  settings.py  settings_base.py  urls.py  wsgi.py
src/dashboard/: models.py  urls.py  views.py
src/templates/: 404.html  access_denied.html  base.html  basic-tables.html  blank.html  buttons.html  calendar.html  form-elements.html  hello-world.html  images.html  profile.html  sidebar.html  signin.html  signup.html
src/timeline/: urls.py  views.py
src/utils/: chart_colors.py  chart_normalization.py  context_processors.py  plotly.py  scope.py  tailwind_colors.py  theme.py
static/css/: main.css
static/data/: Outline-FD-OD-Response-CPM.docx  Toolkit for OD Response (Draft).docx  UW_Fire-Innovation-Grant_Nov-Jan_2024-25.docx  encounters.ipynb  import_data.py  patients.ipynb  referrals.ipynb  referrals_port.ipynb
staticfiles/css/: output.css
templates/: base.html
templates/cases/: index.html
templates/dashboard/: index.html
templates/includes/: footer.html  header.html
templates/timeline/: index.html
timeline/: views.py
tw/: input.css  package-lock.json  package.json
(+373 files in other folders)
